# hdf5-zfp-baseline

./: .clang-format  .gitignore  CMakeLists.txt  README.md  client_data.txt  complete_rebuild.sh  data.txt  env.sh  format.sh  gnu_plot.py  parse_times.sh  pdc_disable_compression.sh  pdc_enable_compression.sh  pdc_run_server.sh  perlmutter_env.sh  plot.py  plot.sh  plot_timers.gnu  prepare_data.sh  rebuild.sh  requirements.txt  run.sh  run_perlmutter.sh  simple_run.sh  sort_data.sh  sum.sh  transform_workloads.json  view_data.sh  workloads.json
1B_single_thread_comp/collective/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_chunk.csv  hdf5_rank_write_all_chunks.csv  output.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_chunk.csv  pdc_rank_write_chunk.csv
1B_single_thread_comp/collective/zfp/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_chunk.csv  hdf5_rank_read_chunk.csv  hdf5_rank_write_all_chunks.csv  output.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_all_chunks.csv
1B_single_thread_comp/independent/raw/: hdf5_chunk_read_chunk.csv  hdf5_rank_write_chunk.csv  pdc_chunk_read_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv
1MB/collective/raw/: hdf5_chunk_write_chunk.csv  hdf5_rank_read_all_chunks.csv  hdf5_rank_write_all_chunks.csv  output.csv  pdc_chunk_read_all_chunks.csv  pdc_chunk_write_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_all_chunks.csv
1MB/collective/zfp/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_all_chunks.csv  hdf5_rank_read_chunk.csv  hdf5_rank_write_all_chunks.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_chunk.csv
1MB/independent/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_all_chunks.csv  hdf5_rank_read_chunk.csv  hdf5_rank_write_all_chunks.csv  hdf5_rank_write_chunk.csv  output.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_all_chunks.csv  pdc_rank_write_chunk.csv
32MB/collective/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_rank_write_chunk.csv  output.csv  pdc_chunk_read_all_chunks.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_chunk.csv
32MB/collective/zfp/: hdf5_chunk_write_chunk.csv  hdf5_rank_read_all_chunks.csv  hdf5_rank_read_chunk.csv  hdf5_rank_write_chunk.csv  output.csv  pdc_chunk_read_all_chunks.csv  pdc_chunk_read_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_write_chunk.csv
32MB/independent/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_rank_read_all_chunks.csv  hdf5_rank_write_all_chunks.csv  hdf5_rank_write_chunk.csv  output.csv  pdc_chunk_read_all_chunks.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_all_chunks.csv
64KB/collective/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_chunk.csv  hdf5_rank_write_all_chunks.csv  hdf5_rank_write_chunk.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv
64KB/collective/zfp/: hdf5_chunk_read_chunk.csv  hdf5_rank_read_all_chunks.csv  hdf5_rank_write_all_chunks.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_read_chunk.csv  pdc_rank_write_all_chunks.csv
64KB/independent/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_all_chunks.csv  hdf5_rank_read_all_chunks.csv  hdf5_rank_write_all_chunks.csv  hdf5_rank_write_chunk.csv  output.csv  pdc_chunk_read_all_chunks.csv  pdc_chunk_read_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_chunk.csv  pdc_rank_write_all_chunks.csv  pdc_rank_write_chunk.csv
64KB_single_thread_again_region_static/2/raw/: hdf5_chunk_read_all_chunks.csv  hdf5_chunk_write_all_chunks.csv  hdf5_chunk_write_chunk.csv  hdf5_rank_write_chunk.csv  pdc_chunk_write_all_chunks.csv  pdc_chunk_write_chunk.csv  pdc_rank_read_all_chunks.csv  pdc_rank_write_all_chunks.csv
new_1024_bad_time_build/: parse_times_output.txt
new_1024_good_time_build/: output.csv
new_res/1024_clients/new_1024_bad_time_build/: cmake_install.cmake  output.csv  zfp_baseline
new_res/1024_clients/new_1024_good_flush_enabled_build/: output.csv
new_res/1024_clients/new_1024_good_time_build/: Makefile  compile_commands.json  parse_times.sh  zfp_baseline
new_res/256_no_cache/workloads/: hdf5_raw.json  hdf5_zfp.json  pdc_raw.json  pdc_zfp.json
new_res/8_nodes/: notes.txt
pdc_tmp/: server.cfg
res/1B_single_thread_comp/: notes.txt
res/collective/raw/: chunk_read_all_chunks.csv  chunk_read_chunk.csv  chunk_write_all_chunks.csv  chunk_write_chunk.csv  output.csv  rank_read_all_chunks.csv  rank_read_chunk.csv  rank_write_all_chunks.csv  rank_write_chunk.csv
res/collective/zfp/: chunk_read_all_chunks.csv  output.csv  (+7 more)
src/: exec_io_impl.c  exec_io_impl.h  main.c  simple_main.c
src/common/: common.c  common.h  config.c  config.h  log.h  util.c  util.h
src/hdf5_impl/: hdf5_io_impl.c  hdf5_io_impl.h
src/pdc_impl/: pdc_io_impl.c  pdc_io_impl.h
workloads/: hdf5_raw.json  hdf5_raw_read.json  hdf5_raw_write.json  hdf5_zfp.json  hdf5_zfp_read.json  hdf5_zfp_write.json  pdc_raw.json  pdc_raw_read.json  pdc_raw_write.json  pdc_zfp_read.json  pdc_zfp_write.json
(+286 files in other folders)
